[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]

[project]
name = "rustitude"
version = "0.3.2"
description = "Python bindings for the Rustitude library"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
keywords = ["physics", "math", "rust"]
authors = [{ email = "dene@cmu.edu" }, { name = "Nathaniel Dene Hoffman" }]
maintainers = [{ name = "Nathaniel Dene Hoffman", email = "dene@cmu.edu" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
]

dependencies = []

[project.urls]
homepage = "https://github.com/denehoffman/rustitude"
repository = "https://github.com/denehoffman/rustitude"
changelog = "https://github.com/denehoffman/rustitude/blob/main/CHANGELOG.md"
# TODO: documentation = "readthedocs.org"
