[package]
name = "py-rustitude"
version = { workspace = true }
edition = "2021"
description = "A library to create and operate models for particle physics amplitude analyses"
readme = "README.md"
license-file = "LICENSE"

[lib]
name = "rustitude"
crate-type = ["cdylib"]

[dependencies]
rayon = { workspace = true }
rustitude = { workspace = true }
rustitude-core = { workspace = true }
rustitude-gluex = { workspace = true }
nalgebra = { workspace = true }
pyo3 = { workspace = true }
ganesh = { workspace = true }

[features]
default = []
