[package]
name = "rustitude-core"
version = "3.4.0"
edition = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license-file = { workspace = true }

[dependencies]
rayon = { workspace = true }
approx = { workspace = true }
nalgebra = { workspace = true }
num = { workspace = true }
num-complex = { workspace = true }
num-traits = { workspace = true }
parquet = { workspace = true }
indexmap = { workspace = true }
parking_lot = { workspace = true }
oxyroot = { workspace = true }
itertools = { workspace = true }
pyo3 = { workspace = true }
thiserror = { workspace = true }
dyn-clone = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
sphrs = { workspace = true }

[features]
simd = []

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./docs-header.html"]
