[package]
name = "rustitude"
version = "0.5.0"
edition = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license-file = { workspace = true }
readme = "../../README.md"

[dependencies]
rustitude-core = { workspace = true }
rustitude-gluex = { workspace = true, optional = true }

[dev-dependencies]
rand = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "kmatrix"
harness = false

[features]
default = ["gluex"]
gluex = ["dep:rustitude-gluex"]
